1999-08-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m: Move all c_*, m_*, and f_* Java variables to
	javavars.h. (create_method_refs): Replace m_StringValueOf with
	m_StringValueOf{Boolean,Char,Int,Long,Float,Double,Object}.

	* Makefile.am (defobj_HEADERS): Add javavars.h.

	* javavars.h: New file.

1999-08-10  Marcus Daniels  <mgd@caos.santafe.edu>

	* directory.m (swarm_directory_ensure_selector): Add trailing
	colon if one is needed but is absent in Java spec.

1999-08-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* FCall.m (ffi_types): Add entries for long double and Class.
	([FCall_c -performCall], [FCall_c -getRetVal:buf:]): Add
	support for long double.
	(defobj_init_java_call_tables): Set fcall_type_{class,long_double}
	cases to NULL.

1999-08-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* directory.m (c_Field, c_Class, c_Method, c_Object, c_String):
	Renamed from lowercased version; use consistent naming convention
	for standard classes vs. primtives.  Accommodate throughout.
	(get_java_class, get_type_field_for_class): Split out internal
	functions previously named `find' and `find_primtive'.
	(swarm_directory_ensure_selector): Add type info to type-conflict
	message.
	(m_ClassGetClass, m_ClassGetName): New variables.
	(get_class_name_from_object, get_class_name): Return const char *,
	not jstring.
	([DirectoryEntry -describe:], create_signature_from_object,
	swarm_directory_ensure_class, swarm_directory_get_swarm_class):
	Per previous change.
	(objc_class_from_class_name): Renamed.
	(classp): Search up tree.  Handle c_Class.

	* defobj.h (types_t): Add Class.

	* FArguments.m (java_type_signature, objc_types, fcall_type_size,
	[FArguments_c -_setReturnType_:]): Accomodate fcall_type_class.
	(get_fcall_type_for_objc_type): Raise an event rather than aborting.

	* FArguments.h (FCALL_TYPE_COUNT): Increment.
	(fcall_type_t): Add fcall_type_class.

1999-08-08  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
